--- a/res/layout/welcome_activity.xml
+++ b/res/layout/welcome_activity.xml
@@ -71,14 +71,13 @@
                     android:layout_height="wrap_content"
                     android:paddingStart="@dimen/content_margin_left"
                     android:paddingEnd="@dimen/content_margin_left"
-                    android:gravity="center"
-                    style="@style/PageContent">
+                    android:gravity="center">
 
                     <TextView
                         android:id="@+id/bootloader_status"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        style="@style/PageSummaryText"
+                        style="@style/SudItemTitle.GlifDescription"
                         android:textSize="16sp"
                         android:layout_marginBottom="@dimen/summary_margin_bottom"
                         android:paddingRight="@dimen/location_text_margin_right" />
@@ -87,7 +86,7 @@
                         android:id="@+id/oemunlock_status"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        style="@style/PageSummaryText"
+                        style="@style/SudItemTitle.GlifDescription"
                         android:textSize="16sp"
                         android:layout_marginBottom="@dimen/summary_margin_bottom"
                         android:paddingRight="@dimen/location_text_margin_right" />
