--- a/res/layout/install_apps_activity.xml
+++ b/res/layout/install_apps_activity.xml
@@ -29,54 +29,73 @@
         android:layout_height="match_parent"
         style="@style/SudContentFrame">
 
-        <TextView
-            style="@style/SudItemTitle.GlifDescription"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingStart="@dimen/content_margin_left"
-            android:paddingEnd="@dimen/content_margin_right"
-            android:paddingTop="@dimen/summary_margin_bottom"
-            android:paddingBottom="@dimen/summary_margin_bottom"
-            android:text="@string/install_apps_subtitle"
-            android:textSize="15sp" />
-
-        <include layout="@layout/divider" />
-
-        <LinearLayout
-            android:id="@+id/allLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="?android:attr/selectableItemBackground"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:paddingStart="@dimen/content_margin_left"
-            android:paddingTop="16dp"
-            android:paddingEnd="@dimen/data_switch_margin_right"
-            android:paddingBottom="16dp">
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/install_apps_select_all"
-                android:textSize="15sp" />
-
-            <CheckBox
-                android:id="@+id/checkBoxAll"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:checked="true" />
-
-        </LinearLayout>
-
-        <include layout="@layout/divider" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/list"
+        <FrameLayout
+            android:id="@+id/page"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+            android:layout_weight="1">
+
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:fillViewport="true">
+
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <TextView
+                        style="@style/SudItemTitle.GlifDescription"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingStart="@dimen/content_margin_left"
+                        android:paddingEnd="@dimen/content_margin_right"
+                        android:paddingTop="@dimen/summary_margin_bottom"
+                        android:paddingBottom="@dimen/summary_margin_bottom"
+                        android:text="@string/install_apps_subtitle"
+                        android:textSize="15sp" />
+
+                    <include layout="@layout/divider" />
+
+                    <LinearLayout
+                        android:id="@+id/allLayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="?android:attr/selectableItemBackground"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal"
+                        android:paddingStart="@dimen/content_margin_left"
+                        android:paddingTop="16dp"
+                        android:paddingEnd="@dimen/data_switch_margin_right"
+                        android:paddingBottom="16dp">
+
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="@string/install_apps_select_all"
+                            android:textSize="15sp" />
+
+                        <CheckBox
+                            android:id="@+id/checkBoxAll"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:checked="true" />
+
+                    </LinearLayout>
+
+                    <include layout="@layout/divider" />
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/list"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
+                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+                </LinearLayout>
+            </ScrollView>
+        </FrameLayout>
 
         <org.lineageos.setupwizard.NavigationLayout
             android:id="@+id/navigation_bar"
