--- a/res/layout/welcome_activity.xml
+++ b/res/layout/welcome_activity.xml
@@ -142,16 +142,11 @@
                         android:id="@+id/factory_reset"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:paddingLeft="@dimen/content_margin_left"
-                        android:paddingRight="@dimen/location_text_margin_right"
                         android:gravity="center"
-                        android:textSize="16sp"
-                        android:textAllCaps="true"
-                        android:textColor="@color/white"
-                        android:background="@color/accent"
                         android:maxLines="1"
                         android:ellipsize="end"
-                        android:text="@string/factory_reset"/>
+                        android:text="@string/factory_reset"
+                        style="@style/SudGlifButton.Primary" />
 
                 </LinearLayout>
             </ScrollView>
