--- a/res/layout-large-notouch/welcome_activity.xml
+++ b/res/layout-large-notouch/welcome_activity.xml
@@ -36,7 +36,7 @@
             android:layout_height="0dp"
             android:layout_weight="65"
             android:layout_gravity="center"
-            android:src="@drawable/calyx_logo"
+            android:src="@drawable/calyx_logo_no_text"
             android:adjustViewBounds="true"
             android:scaleType="fitCenter"
             android:gravity="center"
