--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -19,6 +19,9 @@
     <style name="Theme.Setup" parent="@style/SudFullDynamicColorThemeGlifV3.Light">
         <item name="sucUsePartnerResource">true</item>
         <item name="sudUsePartnerHeavyTheme">true</item>
+        <item name="android:windowLightStatusBar">@bool/isDark</item>
+        <item name="android:windowLightNavigationBar">@bool/isLight</item>
+        <item name="sucLightStatusBar">@bool/isDark</item>
     </style>
 
     <style name="SpinnerItem">
