--- a/res/values-night/styles.xml
+++ b/res/values-night/styles.xml
@@ -7,5 +7,6 @@
     <style name="Theme.Setup" parent="@style/SudFullDynamicColorThemeGlifV3">
         <item name="sucUsePartnerResource">true</item>
         <item name="sudUsePartnerHeavyTheme">true</item>
+        <item name="android:windowLightNavigationBar">false</item>
     </style>
 </resources>
