--- a/res/layout/welcome_activity.xml
+++ b/res/layout/welcome_activity.xml
@@ -44,13 +44,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="128dp"
                 android:adjustViewBounds="true"
-                android:scaleType="fitCenter"
+                android:scaleType="fitStart"
                 android:src="@drawable/calyx_logo_no_text" />
-
-            <Space
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="0.5"/>
         </LinearLayout>
 
         <LinearLayout
