--- a/res/values/calyx_strings.xml
+++ b/res/values/calyx_strings.xml
@@ -35,6 +35,9 @@
     <string name="oemunlock_notallowed" translatable="false">OEM unlocking: Not Allowed</string>
     <string name="factory_reset" translatable="false">Factory reset and power off</string>
 
+    <!-- Welcome: work profile -->
+    <string name="setup_managed_profile_welcome_message">Setup your work profile</string>
+
     <!-- eSIM setup -->
     <string name="euicc_summary">You can also add an eSIM to your device.</string>
     <string name="sim_missing_full_description"><xliff:g id="sim_missing_summary">%1$s</xliff:g>\n<xliff:g id="euicc_summary">%2$s</xliff:g></string>
