--- a/res/values/calyx_strings.xml
+++ b/res/values/calyx_strings.xml
@@ -42,7 +42,7 @@
 
     <!-- eSIM setup -->
     <string name="euicc_summary">You can also add an eSIM to your device.</string>
-    <string name="sim_missing_full_description"><xliff:g id="sim_missing_summary">%1$s</xliff:g>\n<xliff:g id="euicc_summary">%2$s</xliff:g></string>
+    <string name="sim_missing_full_description" translatable="false"><xliff:g id="sim_missing_summary">%1$s</xliff:g>\n<xliff:g id="euicc_summary">%2$s</xliff:g></string>
     <string name="setup_euicc">Setup eSIM</string>
 
     <!-- Bootloader Lock Status -->
