--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -5,7 +5,7 @@
      SPDX-License-Identifier: Apache-2.0
 -->
 <resources>
-    <style name="Theme.Setup" parent="@style/SudFullDynamicColorThemeGlifV3.Light">
+    <style name="Theme.Setup" parent="@style/SudFullDynamicColorThemeGlifV3.DayNight">
         <item name="sucUsePartnerResource">true</item>
         <item name="sudUsePartnerHeavyTheme">true</item>
     </style>
